Changes in 4.5.3

1) Fix logging NONAT rules.

2) Don't let fw-fw be optimized away.

3) Don't optimize away non-empty rules chains.

4) Represent masks in hex.

5) Don't specify a mask in tcpri-generated rules.

Changes in 4.5.2

1) Extend OPTIMIZE & 4 to all tables.

2) Add OPTIMIZE_ACCOUNTING.

3) Add -p option to check.

Changes in 4.5.1

1)  Fix syntax error in /sbin/shorewall.

2)  Don't generate source type rule for ICMP/ICMPv6.

3)  Add <device> argument to 'show tc'.

4)  Fix 'save' when DYNAMIC_BLACKLIST=No

5)  Allow COMMENTs in tcpri.

6)  More ACCEPT optimization with OPTIMIZE & 2.

7)  OPTIMIZE & 4.

8)  Allow ipp2p in tcpri.

Changes in 4.5.0

1)  Allow control over how the Mark is used.

2)  Generate warning on <macro>/<param>.

3)  Add a new optimization option.

4)  Combine identical logging chains.

5)  Added ACCOUNTING and DYNAMIC_BLACKLIST options.

6)  Don't unconditionally pass traffic from routemarked interfaces
    through the tcpre chain.

7)  Automatically assign mark values.

8)  Simplified Traffic Shaping
