@@ -12,6 +12,8 @@ Shorewall 4.5.3
 3)  You may now preview the generated ruleset by using the '-r' option
     to the 'check' command (e.g., "shorewall check -r").
 
+4)  TPROXY support has been added.
+
 ----------------------------------------------------------------------------
                     M I G R A T I O N   I S S U E S
 ----------------------------------------------------------------------------
