@@ -10,6 +10,8 @@ Changes in 4.5.3
 
 5) Don't specify a mask in tcpri-generated rules.
 
+6) Add TPROXY support.
+
 Changes in 4.5.2
 
 1) Extend OPTIMIZE & 4 to all tables.
